[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/SummonBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Fonts/JetBrains Mono Regular Nerd Font Complete Mono Windows Compatible.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/GroundBlocks.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=8]
[ext_resource path="res://Assets/PauseButton1.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/PlayerData.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/LeftArrowButton1.png" type="Texture" id=16]
[ext_resource path="res://Assets/RightArrowButton1.png" type="Texture" id=17]
[ext_resource path="res://Assets/UpArrowButton1.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 809.925, 49.1013 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 904.276, 10 )

[sub_resource type="StreamTexture" id=4]
flags = 4

[sub_resource type="StreamTexture" id=5]
flags = 4

[sub_resource type="StreamTexture" id=6]
flags = 4

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 256, 143.608 )

[sub_resource type="Environment" id=8]
background_mode = 1
glow_enabled = true
glow_bloom = 1.0

[node name="Level" type="Node2D" groups=[
"Level",
]]
pause_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 1472.0, 1728.0 ],
"_edit_vertical_guides_": [ 539.972 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummonBlocks" type="Node2D" parent="."]

[node name="SummonBlock0" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 928.99, 64 )

[node name="SummonBlock1" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 800.99, 64 )

[node name="SummonBlock2" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 672.99, 64 )

[node name="SummonBlock3" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 544.99, 64 )

[node name="SummonBlock4" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 416.99, 64 )

[node name="SummonBlock5" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 288.99, 64 )

[node name="SummonBlock6" parent="SummonBlocks" instance=ExtResource( 1 )]
position = Vector2( 160.99, 64 )

[node name="SummonTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CanvasLayer" type="Node2D" parent="."]

[node name="DirtBlocks" type="Node2D" parent="CanvasLayer"]

[node name="FPS_meter" type="Node2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="FPS_meter"]
margin_left = 64.0
margin_top = 128.0
margin_right = 504.0
margin_bottom = 320.0
custom_fonts/normal_font = SubResource( 1 )
text = "Hello World!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCounter" type="Node2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="ScoreCounter"]
margin_left = 704.0
margin_top = 128.0
margin_right = 1016.0
margin_bottom = 320.0
custom_fonts/normal_font = SubResource( 1 )
text = "Score : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="ScoreCounter"]
wait_time = 0.5
autostart = true

[node name="RemoveBlocks" type="Timer" parent="."]
process_mode = 0
wait_time = 8.0

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 768, 1064 )
collision_layer = 17
collision_mask = 17

[node name="Boundaries" type="Node2D" parent="."]

[node name="Ground" parent="Boundaries" instance=ExtResource( 4 )]
position = Vector2( 539.972, 1288 )
collision_layer = 5

[node name="WallLeft" parent="Boundaries" instance=ExtResource( 4 )]
position = Vector2( -32.3398, 727 )
rotation = 1.57079
collision_layer = 13
collision_mask = 13

[node name="WallRight" parent="Boundaries" instance=ExtResource( 4 )]
position = Vector2( 1112.23, 727 )
rotation = 1.57079
collision_layer = 13
collision_mask = 13

[node name="StaticBody2D" type="StaticBody2D" parent="Boundaries"]
position = Vector2( 539.972, 64 )
collision_layer = 16
collision_mask = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/StaticBody2D"]
shape = SubResource( 2 )

[node name="OverFlowCheck" type="StaticBody2D" parent="Boundaries"]
position = Vector2( 539.972, 174 )
collision_layer = 16384
collision_mask = 16384
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/OverFlowCheck"]
shape = SubResource( 3 )

[node name="TouchControls" type="MarginContainer" parent="."]
margin_top = -3.8147e-06
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TouchControls"]
margin_bottom = 4.0

[node name="Control" type="Control" parent="TouchControls/VBoxContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="TouchControls/VBoxContainer"]
margin_top = 4.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="TouchScreenButton" parent="TouchControls/VBoxContainer/HBoxContainer"]
position = Vector2( 64, 1468 )
scale = Vector2( 0.487769, 0.495581 )
normal = ExtResource( 16 )
pressed = SubResource( 4 )
action = "left"

[node name="Jump" type="TouchScreenButton" parent="TouchControls/VBoxContainer/HBoxContainer"]
position = Vector2( 416.99, 1468 )
scale = Vector2( 0.479395, 0.495581 )
normal = ExtResource( 18 )
pressed = SubResource( 5 )
action = "jump"

[node name="Right" type="TouchScreenButton" parent="TouchControls/VBoxContainer/HBoxContainer"]
position = Vector2( 768, 1468 )
scale = Vector2( 0.484375, 0.491431 )
normal = ExtResource( 17 )
pressed = SubResource( 6 )
action = "right"

[node name="Pause" type="TouchScreenButton" parent="TouchControls"]
position = Vector2( 486.029, 1778.33 )
scale = Vector2( 0.197758, 0.21586 )
normal = ExtResource( 13 )
shape = SubResource( 7 )
action = "pause"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="Pause" parent="." instance=ExtResource( 14 )]
pause_mode = 2
visible = false
script = ExtResource( 8 )

[node name="QuitButton" parent="Pause/MarginContainer/VBoxContainer" index="1"]
margin_top = 237.0

[node name="PlayerData" parent="." instance=ExtResource( 15 )]
[connection signal="timeout" from="SummonTimer" to="." method="_on_SummonTimer_timeout"]
[connection signal="timeout" from="ScoreCounter/Timer" to="." method="_on_Timer_timeout"]

[editable path="Pause"]
